--- a/typescript/packages/internal/turbo/generators/templates/plugin.hbs
+++ b/typescript/packages/internal/turbo/generators/templates/plugin.hbs
@@ -1,5 +1,5 @@
 import { defineDkgPlugin } from "@dkg/plugins";
 
-export default defineDkgPlugin((ctx, mcp) => {
+export default defineDkgPlugin((ctx, mcp, api) => {
   // Your plugin implementation goes here
 });
