--- a/packages/internal/turbo/generators/templates/plugin-test.hbs
+++ b/packages/internal/turbo/generators/templates/plugin-test.hbs
@@ -5,7 +5,7 @@ import { expect } from "chai";
 import sinon from "sinon";
 import {{camelCase name}}Plugin from "../src/index.js";
 import express from "express";
-import request from "supertest";
+// import request from "supertest"; // Uncomment when you add API endpoint tests
 
 // Mock DKG context
 const mockDkgContext = {
