fix github error

--- a/packages/internal/turbo/generators/templates/plugin-test.hbs
+++ b/packages/internal/turbo/generators/templates/plugin-test.hbs
@@ -1,7 +1,7 @@
 import { describe, it, beforeEach, afterEach } from "mocha";
 import { expect } from "chai";
 import sinon from "sinon";
-import {{camelCase name}}Plugin from "../src/index.js";
+import {{camelCase name}}Plugin from "../dist/index.js";
 import {
   createExpressApp,
   createInMemoryBlobStorage,
